workshops/gloo-mesh-demo/install/online-boutique/checkout-feature.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend-apis
  labels:
    istio.io/rev: 1-13
---
###########################################################
## Services
###########################################################
apiVersion: v1
kind: Service
metadata:
  name: shippingservice
  namespace: backend-apis
  labels:
    app: shippingservice
spec:
  type: ClusterIP
  selector:
    app: shippingservice
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
  namespace: backend-apis
  labels:
    app: paymentservice
spec:
  selector:
    app: paymentservice
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
  namespace: backend-apis
  labels:
    app: checkoutservice
spec:
  selector:
    app: checkoutservice
  ports:
  - name: grpc
    port: 5050
    targetPort: 5050
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingservice
  namespace: backend-apis
spec:
  selector:
    matchLabels:
      app: shippingservice
  template:
    metadata:
      labels:
        app: shippingservice
    spec:
      serviceAccountName: shipping
      containers:
      - name: server
        image: gcr.io/solo-test-236622/shippingservice:solo-build
        ports:
        - containerPort: 50051
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
  namespace: backend-apis
spec:
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      serviceAccountName: payment
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/solo-test-236622/paymentservice:solo-build
        ports:
        - containerPort: 50051
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
  namespace: backend-apis
spec:
  selector:
    matchLabels:
      app: checkoutservice
  template:
    metadata:
      labels:
        app: checkoutservice
    spec:
      serviceAccountName: checkout
      containers:
        - name: server
          image: gcr.io/solo-test-236622/checkoutservice:solo-build
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5050
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:5050"]
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:5050"]
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-loadgenerator
  namespace: backend-apis
spec:
  selector:
    matchLabels:
      app: checkout-loadgenerator
  replicas: 1
  template:
    metadata:
      labels:
        app: checkout-loadgenerator
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      serviceAccountName: checkout-loadgenerator
      terminationGracePeriodSeconds: 5
      restartPolicy: Always
      containers:
      - name: main
        image: golang:1.15.15
        command:
            - /bin/sh
            - -c
            - >
                go get github.com/fullstorydev/grpcurl/cmd/grpcurl@latest && i=0;
                while [ $i -lt 10000 ];
                do
                  grpcurl --plaintext -d "{ \"userCurrency\": \"USD\", \"creditCard\": { \"creditCardNumber\": \"4432-8015-6152-0454\", \"creditCardCvv\": 123, \"creditCardExpirationYear\": 2023, \"creditCardExpirationMonth\": 12 }, \"address\": { \"streetAddress\": \"1600 Amphitheatre Parkway\", \"zipCode\": 94043, \"city\": \"Mountain View\", \"state\": \"CA\", \"country\": \"United States\" }, \"email\": \"someone@example.com\" }" -v --proto /demo.proto -import-path / checkout.backend-apis-te [...]
                  grpcurl --plaintext -d "{ \"userCurrency\": \"USD\", \"creditCard\": { \"creditCardNumber\": \"4432-8015-6152-0454\", \"creditCardCvv\": 123, \"creditCardExpirationYear\": 2023, \"creditCardExpirationMonth\": 12 }, \"address\": { \"streetAddress\": \"1600 Amphitheatre Parkway\", \"zipCode\": 94043, \"city\": \"Mountain View\", \"state\": \"CA\", \"country\": \"United States\" }, \"email\": \"someone@example.com\" }" -v --proto /demo.proto -import-path / checkoutservice.backend- [...]
                  sleep 1
                done
        volumeMounts:
        - name: "protos"
          mountPath: "/demo.proto"
          subPath: "demo.proto"
      volumes:
        - name: "protos"
          configMap:
            name: "online-boutique-proto"
---
apiVersion: v1
kind: Service
metadata:
  name: checkout-loadgenerator
  namespace: backend-apis
  labels:
    app: loadgenerator
spec:
  type: ClusterIP
  selector:
    app: checkout-loadgenerator
  ports:
  - name: http
    port: 80
    targetPort: 8080
