workshops/gloo-mesh-demo/install/online-boutique/default-deny.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: default-deny
spec:
  {}
